--- a/1_portfolio/index.html
+++ b/1_portfolio/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Atharva Pingale - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Atharva Pingale</h1>
+        <p><strong>B.E. Information Technology | Vivekanand Institute of Technology</strong></p>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I’m <strong>Atharva Pingale</strong>, a second-year IT student who enjoys building useful tech solutions that can make everyday life easier and better for people.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>KisaanSetu - Smart Crop Recommendation App:</strong> Designed a mobile app to help farmers choose the best crops to grow by using real-time weather data and sensor inputs. The goal was to support smarter farming decisions and improve yield.</li>
+                <li><strong>KindMeals - Food Donation Platform:</strong> Built a web app that helps connect people who have excess food with those who need it. It simplifies the donation process and ensures food reaches the right hands without going to waste.</li>
+                <li><strong>Smart Vending Machine:</strong> Conceptualized an intelligent vending machine that dispenses healthy snacks and keeps track of inventory and user preferences using IoT technology.</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>If you would like to get in touch, feel free to drop me an Email.</p>
+            <p><strong>Email:</strong> <a href="mailto:atharva@gmail.com">atharva@gmail.com</a></p>
+        </section>
+    </main>
 </body>
 </html>
